# DataEngineerTools

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt
1Introduction/: Introduction.ipynb  Part1_Git.ipynb  Part1_Simple_Web_Scraping.ipynb  Part1_virtual_env.md  Part2_Docker.ipynb  Part2_Git.ipynb  Part2_Web_Scraping_WebDriver.ipynb  Part3_Docker.ipynb  Part3_Simple_Web_Scraping.ipynb  Part4_Simple_Web_Scraping.ipynb  Part4_Web_Scraping_WebDriver.ipynb  Part5_Web_Scraping_WebDriver.ipynb  README.md  README.rst  archi.rst  gittest.txt  virtual_env.md
2Scrapy/: 1FirstSpider.rst  2YourSpider.rst  FirstSpider.ipynb  Introduction.ipynb  README.rst  YourSpiderr.ipynb  citations_churchill_spider1.py  result.json
2ScrapyProjet/: Actualite.py  Introduction.ipynb  classement.json  classement.py  dembele.json  dembele.py  joueur.json  joueur.py  joueur2.json  joueur2.py  joueur3.py  merge_player_data.py  messi.json  messi.py  output.json  output2.json  output3.json  player_info.json  result.json  transfert.py
3Mongo/: ExerciceKickStarter.ipynb  ExerciceYoutube.ipynb  Introduction.ipynb  README.rst  Tutoriel.ipynb
4Redis/: Introduction.ipynb  README.rst  Redis.ipynb  make_burger.py  process_price_weight.py
5ElasticSearch/: ElasticSearch.ipynb  Introduction.ipynb  README.rst  docker-compose.yml
6Evaluation/: README.md  README.rst
Data Engineer/: ARCHI.rst  Dockerfile  INTRO.rst  README.md  README.rst  SCRAPY.rst  requirements.txt
ElasticSearch/: ElasticSearch.ipynb  ElasticSearch.rst
(+250 files in other folders)
