[project]
name = "dataengineertools"
version = "0.1.0"
description = "Data Engineering course materials and exercises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.2",
    "requests==2.32.3",
    "bs4==0.0.2",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "selenium==4.24.0",
    "scrapy==2.11.2",
    "pymongo==4.9.1",
    "elasticsearch==8.15.1",
    "redis==5.0.8",
    "ipykernel>=7.1.0",
]

